--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,6 @@ jobs:
 
       - name: Run Python tests
         run: pytest tests/
-        working-directory: sea-core
 
   test-typescript:
     name: Test TypeScript
@@ -123,7 +122,6 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
-          cache-dependency-path: sea-core/package-lock.json
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -138,15 +136,12 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        working-directory: sea-core
 
       - name: Build TypeScript bindings
         run: npm run build
-        working-directory: sea-core
 
       - name: Run TypeScript tests
         run: npm test
-        working-directory: sea-core
 
   test-wasm:
     name: Test WASM
@@ -177,7 +172,7 @@ jobs:
 
       - name: Check bundle size
         run: |
-          SIZE=$(stat -c%s "sea-core/pkg/sea_core_bg.wasm")
+          SIZE=$(stat -c%s "pkg/sea_core_bg.wasm")
           echo "WASM bundle size: $SIZE bytes"
           if [ -z "$SIZE" ] || ! [[ "$SIZE" =~ ^[0-9]+$ ]]; then
             echo "::error::Unable to determine WASM bundle size ('$SIZE')"
@@ -187,6 +182,7 @@ jobs:
             echo "::error::WASM bundle exceeds 512KB limit"
             exit 1
           fi
+        working-directory: sea-core
 
   security:
     name: Security Audit
